--- a/src/komponentit/Materiaaleja.css
+++ b/src/komponentit/Materiaaleja.css
@@ -1,23 +1,22 @@
-.kuka-container {
-    
+.materiaaleja-container {
+    background-color: #ffffffb4;
     height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: top;
     align-items: center;
-    box-shadow: inset 0 0 0 1000px rgba(53, 56, 83, 0.76);
     object-fit: contain;
 
   }
-.kuka-container > h1 {
-    color: rgb(255, 255, 255);
+.materiaaleja-container > h1 {
+    color: rgb(0, 0, 0);
     font-size: 100px;
-    margin-top: 0px;
+    margin-top: 50px;
   }
 
   
-.kuka-container > p {
+.materiaaleja-container > p {
     margin-top: 15px;
     color: rgb(255, 255, 255);
     font-size: 25px;
