--- a/src/komponentit/NaviBar.css
+++ b/src/komponentit/NaviBar.css
@@ -86,7 +86,7 @@
     .navi-menu {
       display: flex;
       flex-direction: column;
-      width: 100%;
+      width: 50%;
       height: 90vh;
       position: absolute;
       top: 80px;
@@ -96,7 +96,7 @@
     }
   
     .navi-menu.active {
-      background: #3d3d3d;
+      box-shadow: inset 0 0 0 1000px rgb(255, 255, 255);
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
