--- a/src/komponentit/Alapalkki.css
+++ b/src/komponentit/Alapalkki.css
@@ -5,19 +5,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: inset 0 0 0 1000px rgba(14, 14, 14, 0.76);
+    box-shadow: inset 0 0 0 1000px rgb(27, 27, 27);
     object-fit: contain;
 }
 
   .alapalkki-container > h1 {
     color: rgb(66, 66, 66);
-    font-size: 20px;
+    font-size: 10px;
     margin-top: 0px;
   }
 
   @media screen and (max-width: 768px) {
     .alapalkki-container > h1 {
-      font-size: 50px;
+      font-size: 10px;
       margin-top: 0px;
 
     }
