--- a/src/komponentit/Materiaaleja.css
+++ b/src/komponentit/Materiaaleja.css
@@ -1,19 +1,19 @@
 .materiaaleja-container {
-  background-color: #ffffffb4;
+  background-color: #ffffff;
   height: 120vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.76);
+  /*box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.76);*/
   object-fit: contain;    
     
   }
 .materiaaleja-container > h1 {
     color: rgb(0, 0, 0);
-    font-size: 100px;
-    margin-top: 50px;
+    font-size: 20px;
+    margin-top: 100px;
   }
 
   
